--- a/jenkins/integration-tests-java/Jenkinsfile
+++ b/jenkins/integration-tests-java/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Hello') {
             steps {
-                echo 'Hello World. Test Change.'
+                echo 'Hello World. Test Change. Inside branch.'
             }
         }
     }
