--- a/jenkins/integration-tests-java/Jenkinsfile
+++ b/jenkins/integration-tests-java/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
 
         REGION="us-west1"
         GCS_STAGING_LOCATION="gs://dataproc-templates/integration-testing"
-        SUBNET='projects/$GCP_PROJECT/regions/us-west1/subnetworks/test-subnet1'
+        SUBNET=credentials('env-gcp-test-subnet')
     }
 
     stages {
