--- a/jenkins/integration-tests-java/Jenkinsfile
+++ b/jenkins/integration-tests-java/Jenkinsfile
@@ -17,9 +17,11 @@ pipeline {
         GCS_STAGING_LOCATION = "gs://dataproc-templates/integration-testing"
         SUBNET = credentials('env-gcp-test-subnet')
 
-        GIT_BRANCH_LOCAL = sh '''
-            echo $branchName | sed -e 's|origin/||g'
-        '''
+        GIT_BRANCH_LOCAL = sh (
+            script: "echo ${branchName:=main} | sed -e 's|origin/||g'",
+            returnStdout: true
+        ).trim()
+
         MAVEN_HOME = "/var/lib/jenkins/tools/hudson.tasks.Maven_MavenInstallation/maven"
         PATH = "$PATH:$MAVEN_HOME/bin"
     }
