--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,44 +16,8 @@ steps:
   - name: gcr.io/cloud-builders/git
     args:
       - clone
-      - 'https://github.com/GoogleCloudPlatform/${_REPO}.git'
+      - 'https://github.com/vanshaj-bhatia/${_REPO}.git'
     id: check-out-source-code
-  - name: python
-    args:
-      - python
-      - setup.py
-      - bdist_egg
-      - '--output=${_BINARY_PREFIX}.egg'
-    dir: '${_REPO}/python'
-    id: build-python-egg
-  - name: gcr.io/cloud-builders/gsutil
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - |
-        gsutil cp ${_REPO}/python/main.py gs://${_PUBLIC_BUCKET}/$(date -u +%Y-%m-%d)_$TAG_NAME/python/  
-    id: cp-python-main-to-gcs-tag-folder
-  - name: gcr.io/cloud-builders/gsutil
-    args:
-      - cp
-      - main.py
-      - 'gs://${_PUBLIC_BUCKET}/latest/python/'
-    dir: '${_REPO}/python'
-    id: cp-python-main-to-gcs-latest-folder
-  - name: gcr.io/cloud-builders/gsutil
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - |
-        gsutil cp ${_REPO}/python/${_BINARY_PREFIX}.egg gs://${_PUBLIC_BUCKET}/$(date -u +%Y-%m-%d)_$TAG_NAME/python/
-    id: cp-python-egg-to-gcs-tag-folder
-  - name: gcr.io/cloud-builders/gsutil
-    args:
-      - cp
-      - '${_BINARY_PREFIX}.egg'
-      - 'gs://${_PUBLIC_BUCKET}/latest/python/'
-    dir: '${_REPO}/python'
-    id: cp-python-egg-to-gcs-latest-folder
   - name: 'gcr.io/cloud-builders/mvn:3.5.0-jdk-8'
     args:
       - package
@@ -65,12 +29,12 @@ steps:
     args:
       - '-c'
       - |
-        gsutil cp ${_REPO}/java/target/dataproc-templates-1.0-SNAPSHOT.jar gs://${_PUBLIC_BUCKET}/$(date -u +%Y-%m-%d)_$TAG_NAME/java/
-    id: cp-java-egg-to-gcs-tag-folder
+        gsutil cp ${_REPO}/java/target/dataproc-templates-1.0-SNAPSHOT.jar gs://${_TEMP_BUCKET}/$(date -u +%Y-%m-%d)_$BRANCH_NAME/java/
+    id: cp-java-jar-to-gcs-tag-folder
   - name: gcr.io/cloud-builders/gsutil
     args:
       - cp
       - dataproc-templates-1.0-SNAPSHOT.jar
-      - 'gs://${_PUBLIC_BUCKET}/latest/java/${_BINARY_PREFIX}.jar'
+      - 'gs://${_TEMP_BUCKET}/latest/java/${_BINARY_PREFIX}.jar'
     dir: '${_REPO}/java/target'
     id: cp-java-jar-to-gcs-latest-folder
