--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,7 +14,7 @@
 # gs://temp_dpt_binaries/2024-04-03_feature-cicd-improvements/java/dataproc-templates-1.0-SNAPSHOT.jar
 
 steps:
-- name: 'my-build-image'
+- name: 'gcr.io/cloud-builders/bash'
   entrypoint: 'bash'
   args: ['-c', 'echo "My Secret..."']
   # - name: gcr.io/cloud-builders/git
