--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,9 +23,18 @@ steps:
       #!/usr/bin/env bash
 
       apt-get update && apt-get install -y jq
-      
+
       JENKINS_URL=https://dataproctemplatesci.com/job/dataproc-templates-build/job/temp-builds/job/cloudbuild-trigger-test-job/build?token=CLOUDBUILD_TOKEN
-      CREDS=admin:yadavaja-sandbox
+      CREDS=$(gcloud beta secrets versions access --secret="jenkins-admin-credentials" latest)
+      echo $$CREDS
+
+- id: test bash 2
+  name: gcr.io/cloud-builders/gcloud
+  entrypoint: 'bash'
+  args: 
+    - "-c"
+    - |
+      #!/usr/bin/env bash
 
       BUILD_URL=$(curl -i -s -u $$CREDS $$JENKINS_URL | grep "location" | awk '{printf $$2}' | tr -d '\r')
       if [[ $$? != 0 ]]; then
