--- a/.cloudbuild/build_binaries.yaml
+++ b/.cloudbuild/build_binaries.yaml
@@ -18,9 +18,14 @@ steps:
       - clone
       - 'https://github.com/vanshaj-bhatia/${_REPO}.git'
     id: check-out-source-code
-  - name: 'python' # Or your desired Python version
-    entrypoint: 'pip'
-    args: ['install', 'setuptools']
+  - name: python
+    args:
+      - -m
+      - pip
+      - install
+      - setuptools
+    dir: '${_REPO}/python'
+    id: install-setuptools
   - name: python
     args:
       - python
